--- a/css/maket8.css
+++ b/css/maket8.css
@@ -1,8 +1,35 @@
-.contender{
-    width: 100%;
-   
+body{
     background-color: aqua;
 }
-.favorite styled{
+.icons{
+    width: 600px;
+    margin: 100px auto 0;
     
 }
+
+.icon{
+    background: url(https://img2.freepng.ru/20180624/lc/kisspng-encapsulated-postscript-computer-icons-clip-art-css-sprites-5b2f2a57e6f394.361716641529817687946.jpg);
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+
+}
+
+.ship{
+    background-position: -550px 0;
+    
+}
+.airplane{
+    background-position: -350px 0;
+}
+.car{
+    background-position: -350px 400px;
+}
+
+/*.img1{
+    background:url(https://icons.iconarchive.com/icons/alecive/flatwoken/256/Apps-Icon-Template-icon.png);
+    width: 256px;
+    height: 256px;
+    display: inline-block;
+    margin: 0 256px;
+}*/
