--- a/css/maket1.css
+++ b/css/maket1.css
@@ -2,6 +2,7 @@
     display: flex;
     margin: 0 auto;
     flex-wrap: wrap;
+    margin-top: calc(50vh - 90px);
     
     align-content: center;
     
