--- a/css/maket2.css
+++ b/css/maket2.css
@@ -1,11 +1,17 @@
 
-/*.box{
-    width: 500px; 
+.box{
+    
+    display: flex;
+    flex-wrap: wrap;
+    width: 80vw; 
     margin: 0 auto;
     background-color: bisque;
-}непонятно для чего*/
+    
+}
 
 .header{
+    
+    width: 100%;
     height: 6vh;
     background-color: aqua;
     text-align: center;
@@ -14,31 +20,30 @@
 }
 
 .leftCol{
-    float: left;
-    width: 20vw;
-    height: 80vh;
+    
+    width: 200px;
+    height: 100vh;
     margin-top: 10px;
     background-color: blueviolet;
     overflow: auto;
-    border: 1px solid red;
     text-align: center;
 }
 
 .rightCol{
-    margin-left: 20vw;
-    height: 80vh;
+    
+    flex: 1;
+    height: 100vh;
     margin-top: 10px;
     background-color: burlywood;
     overflow: auto;
-    border: 1px solid red;
     text-align: center;
 }
 
 .footer{
+    width: 100vw;
     height: 6vh;
     background-color: black;
     color: white;
     text-align: center;
-    border: 1px solid red;
     margin-top: 10px;
 }
