--- a/css/maket3.css
+++ b/css/maket3.css
@@ -1,61 +1,49 @@
 .box{
     display: flex;
-    justify-content: center;
-    width: 100vw;
-    height: 80vh;
+    
+    justify-content: space-between;
+    width: 900px;
+    height: 100vh;
     background-color: aqua;
-    border: 3px solid orangered;
-    margin: 0 auto;
     margin-top: 10px;
 }
 
 .header{
-    height: 6vh;
+    width: 900px;
+    height: 6%;
     background-color: blue;
     text-align: center;
-    border: 1px solid red;
     font-size: 2em;
 }
 
 .leftCol{
-    display: flex;
-    float: left;
-    width: 20vw;
-    /*height: 80vh;*/
     
+    width: 200px;
     background-color: blueviolet;
     overflow: auto;
-    border: 1px solid red;
-    text-align: center;/*почему не встает текст по центру?*/
+    text-align: center;
 }
 
 .centerCol{
-    display: flex;
-    /*height: 80vh;*/
-    width: 55vw;
+    flex: 1;
     overflow: auto;
-    border: 1px solid red;
     background-color: chartreuse;
-    text-align: center;/*почему не встает текст по центру?*/
+    text-align: center;
 }
 
 .rightCol{
-    display: flex;
-    float: right;
-    width: 20vw;
-    /*height: 80vh;*/
-    
+    width: 300px;
     background-color: burlywood;
     overflow: auto;
-    border: 1px solid red;
     text-align: center;
 }
 
 .footer{
-    height: 6vh;
+    width: 900px;
+    height: 6%;
     background-color: black;
     color: white;
     text-align: center;
-    border: 1px solid red;
+    
     margin-top: 10px;
 }
