--- a/css/maket3.css
+++ b/css/maket3.css
@@ -1,7 +1,6 @@
-.box{
+.body{
     display: flex;
-    
-    justify-content: space-between;
+    flex-wrap: wrap;
     width: 900px;
     height: 100vh;
     background-color: aqua;
@@ -9,7 +8,7 @@
 }
 
 .header{
-    width: 900px;
+    width: 100%;
     height: 6%;
     background-color: blue;
     text-align: center;
@@ -39,7 +38,7 @@
 }
 
 .footer{
-    width: 900px;
+    width: 100%;
     height: 6%;
     background-color: black;
     color: white;
