--- a/css/maket4.css
+++ b/css/maket4.css
@@ -47,48 +47,40 @@
 
 
 .box {
+    display: flex;
+    flex-wrap: wrap;
     width: 800px; 
     margin: 0 auto;
     background-color: aqua;
    }
 
    .header{
-    height: 25px;
-    background-color: yellow;
-    text-align: center;
-    border: 1px solid red;
-    font-size: 2em;
-    padding: 5px;
+        width:100%;
+        height: 10%;
+        background-color: yellow;
+        text-align: center;
+        font-size: 2em;
+        padding: 5px;
 }
 
    .leftCol {
-    float: left;
-    background-color: blue;
-    width: 576px;
-    padding: 5px;
-    border: 1px solid red;
-    margin-top: 5px;
+    
+        background-color: blue;
+        width: 600px;
+        margin-top: 5px;
    }
 
    .rightCol {
-    float: left;
-    background-color: green;
-    width: 200px;
-    padding: 5px;
-    border: 1px solid red;
-    margin-top: 5px;
+        background-color: green;
+        width: 200px;
+        margin-top: 5px;
    }
 
-   .clear {
-    clear: left;
-   }
-   
    .footer{
+        width: 100%;
+        background-color: black;
+        color: white;
+        text-align: center;
+        margin-top: 5px;
     
-    background-color: black;
-    color: white;
-    text-align: center;
-    border: 1px solid red;
-    margin-top: 5px;
-    padding: 5px;/*текст не входит в подвал*/
 }
