--- a/css/maket4.css
+++ b/css/maket4.css
@@ -1,51 +1,50 @@
 
-/*.box{
-    width: 100vw; 
+.box{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%; 
     margin: 0 auto;
     background-color: bisque;
    
     
-} непонятно для чего
+}
 
 .header{
-    height: 6vh;
+    width: 100%;
+    height: 6%;
     background-color: aqua;
-    border: 1px solid red;
     font-size: 2em;
     text-align: center;
 }
 
 .leftCol{
-    float: left;
-    width: 70vw;
-    height: 80vh;
+    width: 20%;
     margin-top: 10px;
+    padding: 10px;
     background-color: blueviolet;
     overflow: auto;
-    border: 1px solid red;
     text-align: center;
 }
 
 .rightCol{
-    margin-left: 70vw;
-    height: 80vh;
+    flex: 1;    
     margin-top: 10px;
+    padding: 10px;
     background-color: green;
     overflow: auto;
-    border: 1px solid red;
     text-align: center;
 }
 
 .footer{
-    height: 6vh;
+    width: 100%;
+    height: 6%;
     background-color: black;
     color: white;
     text-align: center;
-    border: 1px solid red;
     margin-top: 10px;
-}*/
+}
 
-
+/*
 .box {
     display: flex;
     flex-wrap: wrap;
@@ -83,4 +82,4 @@
         text-align: center;
         margin-top: 5px;
     
-}
+}*/
